--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -13,6 +13,7 @@ a,
   text-decoration: none;
   color: hsla(160, 100%, 37%, 1);
   transition: 0.4s;
+  margin: 10px;
 }
 
 @media (hover: hover) {
