--- a/backend/static/css/style.css
+++ b/backend/static/css/style.css
@@ -84,6 +84,14 @@ body {
     font-size: 0.9em;
     margin: 0 0 10px 0;
   }
+
+  /* Стили для страницы статистики */
+  .statistics {
+    text-align: left;
+    margin-top: 20px;
+    padding: 0 10%;
+    padding-bottom: 100px
+  }
   
   /* Адаптивность */
   @media (max-width: 600px) {
