--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Freedom search</title>
     <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="icon" type="image/x-icon" href="/static/favicon.png">
 </head>
 <body>
     {% block body %}
