--- a/backend/static/css/style.css
+++ b/backend/static/css/style.css
@@ -11,6 +11,10 @@ body {
     text-decoration: none;
     color: #357abd;
   }
+
+  .active {
+    font-weight: bold;
+  }
   
   footer {
     text-align: center;
@@ -62,7 +66,7 @@ body {
   .search-results {
     margin-top: 20px;
     padding: 0 10%;
-    padding-bottom: 100px
+    padding-bottom: 20px
   }
   
   .search-results div {
@@ -83,6 +87,13 @@ body {
     color: #06c;
     font-size: 0.9em;
     margin: 0 0 10px 0;
+  }
+
+  .pagination {
+    text-align: center;
+    color: #2166ab;
+    font-size: large;
+    padding-bottom: 100px;
   }
 
   /* Стили для страницы статистики */
