--- a/backend/search/templates/search/statistics.html
+++ b/backend/search/templates/search/statistics.html
@@ -12,7 +12,7 @@
             <b>Слов на страницах</b>: {{WordsInPages}} (<i>Связка между Словами и Страницами</i>)<br>
             <b>Ссылок</b>: {{Links}} (<i>Все известные ссылки. Используется сетевыми краулерами для обхода страниц</i>)<br>
             <b>Сайтов</b>: {{Site}} (<i>Домены сайтов. Для будущей аналитики и другого функционала будем сохранять все известные нам доменые имена</i>)<br><br>
-            <b>timestamp</b>: {{timestamp}}<br>
+            <b>timestamp</b>: {{timestamp}} UTC<br>
         </div>
     </div>
 {% endblock %}
